--- a/{{cookiecutter.project_slug}}/.github/workflows/tests.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/tests.yml
@@ -18,6 +18,8 @@ jobs:
           - "3.12"
           - "3.13"
     runs-on: ubuntu-latest
+    permissions:
+      contents: read # needed for private repos
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
