--- a/{{cookiecutter.project_slug}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.project_slug}}/.pre-commit-config.yaml
@@ -34,7 +34,4 @@ repos:
         types: [python]
         pass_filenames: false
         require_serial: true
-        stages: [pre-commit]
-
-ci:
-  autofix_prs: true
+        stages: [pre-push]
