--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -36,7 +36,7 @@ lint = [
     # NOTE: ruff is under active development, so we pin conservatively here
     # and let Dependabot periodically perform this update.
     "ruff ~= 0.14.0",
-    "pyright",
+    "pyright ~= 1.1",
     {%- if cookiecutter.docstring_coverage %}
     "interrogate",
     {%- endif %}
